# design-patterns

./: .claudeignore  .gitignore  CLAUDE.md  CONTENT_INVENTORY.md  CONTENT_INVENTORY_V2.md  README.md  README_en.md
practice-projects/django-ddd/: .env.example  .gitignore  Django-DDD-Scaffold.md  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml  requirements.txt
practice-projects/django-ddd/config/: config.docker.yaml  config.yaml
practice-projects/django-ddd/docs/: init.mysql.sql  init.postgres.sql
practice-projects/django-ddd/src/order/: apps.py  models.py
practice-projects/django-ddd/src/order/application/: dto.py  service.py
practice-projects/django-ddd/src/order/domain/: events.py  order.py  repository.py
practice-projects/django-ddd/src/order/infrastructure/: listeners.py  models.py  repository.py
practice-projects/django-ddd/src/order/interfaces/: serializers.py  urls.py  views.py
practice-projects/django-ddd/src/project/: __init__.py  asgi.py  routers.py  settings.py  urls.py  wsgi.py
practice-projects/django-ddd/src/shared/: apps.py
practice-projects/django-ddd/src/shared/domain/: events.py  publisher.py
practice-projects/django-ddd/src/shared/infrastructure/: config.py  events.py  exceptions.py  response.py
practice-projects/django-ddd/src/user/: apps.py  models.py
practice-projects/django-ddd/src/user/application/: dto.py  service.py
practice-projects/django-ddd/src/user/domain/: events.py  repository.py  user.py
practice-projects/django-ddd/src/user/infrastructure/: listeners.py  models.py  repository.py
(+1854 files in other folders)
